--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Oleg Gromov <mail@oleggromov.com> (http://oleggromov.com)",
+  "repository": { 
+    "type" : "git",
+     "url" : "git+https://github.com/oleggromov/oxypogon-renderer.git"
+  },
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.23.1",
